--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,12 @@
+@media only screen and (max-width: 960px){
+	li{
+		float: none;
+		width: 100%;
+	}
+	#right {
+		float: none;
+	}
+}
 body{
 	box-sizing: border-box;
 }
