--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,3 @@
-
-	#right {
-		float: none;
-	}
 }
 body{
 	box-sizing: border-box;
@@ -51,4 +47,7 @@ th{
 	li{
 		float: none;
 		width: 100%;
+	}#right {
+		float: none;
+	}
 	}
